--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,14 +1,20 @@
 changelog:
   categories:
-  - title: Documentation Changes
-    labels:
-    - documentation
-  - title: New Features
-    labels:
-    - enhancement
-  - title: Bug Fixes
-    labels:
-    - bug
-  - title: Other Changes
-    labels:
-       - "*"
+    - title: New Features
+      labels:
+        - enhancement
+    - title: Documentation Changes
+      labels:
+        - documentation
+    - title: Bug Fixes
+      labels:
+        - bug
+    - title: Example
+      labels:
+        - example
+    - title: Deprecations
+      labels:
+        - deprecated
+    - title: Other Changes
+      labels:
+        - "*"
