--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -4,8 +4,13 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Type of version (major / minor / patch)"
+        description: "Type of version to bump"
         required: true
+        type: choice
+        options:
+          - major
+          - minor
+          - patch
 
 jobs:
   bump-version:
@@ -14,22 +19,27 @@ jobs:
     steps:
       - name: Check out source
         uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
+          node-version: "lts/*"
+
+      - name: Setup bun
+        uses: oven-sh/setup-bun@v2
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          useLockFile: false
-      - name: Setup Git
+        run: bun install --frozen-lockfile
+
+      - name: Setup git
         run: |
-          git config user.name '${{ secrets.GIT_USER_NAME }}'
-          git config user.email '${{ secrets.GIT_USER_EMAIL }}'
-      - name: bump version
+          git config user.name 'Samuel Jensen'
+
+      - name: Bump version
         run: npm version ${{ github.event.inputs.version }}
+
+      - name: Quality fix
+        run: bun run quality:fix
 
       - name: Push latest version
         run: git push origin master --follow-tags
