--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,18 +5,20 @@ on:
     types: [published]
 
 jobs:
-  build:
+  publish-npm:
+    name: "Publish to npm"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v1
+      - uses: oven-sh/setup-bun@v2
+      - run: bun install --frozen-lockfile
+      - run: bun run build
+
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "lts/*"
           registry-url: https://registry.npmjs.org/
-      - name: Upgrade NPM
-        run: npm install -g npm
-      - run: npm install
-      - run: npm run build
+
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
