--- a/package.json
+++ b/package.json
@@ -1,77 +1,67 @@
 {
-  "name": "remix-auth-discord",
-  "version": "1.4.1",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
-  "scripts": {
-    "prepare": "npm run build",
-    "build": "tsc --project tsconfig.json",
-    "typecheck": "tsc --project tsconfig.json --noEmit",
-    "lint": "eslint --ext .ts,.tsx src/",
-    "test": "jest --config=config/jest.config.ts --passWithNoTests",
-    "coverage": "npm run test -- --coverage"
-  },
-  "keywords": [
-    "remix",
-    "remix-auth",
-    "auth",
-    "authentication",
-    "strategy",
-    "discord"
-  ],
-  "license": "MIT",
-  "files": [
-    "build",
-    "package.json",
-    "README.md",
-    "LICENSE"
-  ],
-  "repository": {
-    "url": "https://github.com/JonnyBnator/remix-auth-discord",
-    "type": "git"
-  },
-  "homepage": "https://github.com/JonnyBnator/remix-auth-discord#readme",
-  "author": {
-    "name": "Jonathan Brockhaus",
-    "email": "JonnyBnator@protonmail.com"
-  },
-  "contributors": [
-    {
-      "name": "Lennart Gastler",
-      "email": "lennart@lgastler.de",
-      "url": "https://lennartgastler.de"
-    }
-  ],
-  "peerDependencies": {
-    "@remix-run/server-runtime": "^2.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.22.15",
-    "@babel/preset-typescript": "^7.23.3",
-    "@remix-run/node": "^2.1.0",
-    "@remix-run/react": "^2.1.0",
-    "@remix-run/server-runtime": "^2.1.0",
-    "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-jest": "^27.4.3",
-    "eslint-plugin-jest-dom": "^5.1.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-unicorn": "^48.0.1",
-    "jest": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3",
-    "prettier": "^3.0.3",
-    "react": "^18.2.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.2.2"
-  },
-  "dependencies": {
-    "remix-auth": "^3.6.0",
-    "remix-auth-oauth2": "^1.11.2"
-  }
+	"type": "module",
+	"sideEffects": false,
+	"name": "@nichtsam/remix-auth-discord",
+	"version": "2.0.0",
+	"license": "MIT",
+	"keywords": [
+		"remix",
+		"remix-auth",
+		"auth",
+		"authentication",
+		"strategy",
+		"discord"
+	],
+	"scripts": {
+		"build": "tsc",
+		"typecheck": "tsc --noEmit",
+		"quality": "biome check .",
+		"quality:fix": "biome check . --write --unsafe"
+	},
+	"files": ["build", "package.json", "README.md"],
+	"exports": {
+		".": "./build/index.js",
+		"./package.json": "./package.json"
+	},
+	"author": {
+		"name": "Samuel Jensen",
+		"url": "https://nichtsam.com"
+	},
+	"contributors": [
+		{
+			"name": "Lennart Gastler",
+			"email": "lennart@lgastler.de",
+			"url": "https://lennartgastler.de"
+		},
+		{
+			"name": "Samuel Jensen",
+			"url": "https://nichtsam.com"
+		}
+	],
+	"homepage": "https://github.com/nichtsam/remix-auth-discord",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nichtsam/remix-auth-discord"
+	},
+	"bugs": {
+		"url": "https://github.com/nichtsam/remix-auth-discord/issues"
+	},
+	"peerDependencies": {
+		"remix-auth": "^4.0.0"
+	},
+	"dependencies": {
+		"@mjackson/headers": "^0.9.0",
+		"arctic": "^3.0.0",
+		"debug": "^4.3.7"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@total-typescript/tsconfig": "^1.0.4",
+		"@types/bun": "^1.1.14",
+		"@types/debug": "^4.1.12",
+		"msw": "^2.6.6",
+		"typedoc": "^0.27.2",
+		"typedoc-plugin-mdn-links": "^4.0.3",
+		"typescript": "^5.7.2"
+	}
 }
