--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
 	},
 	"contributors": [
 		{
+			"name": "Jonathan Brockhaus",
+			"email": "JonnyBnator@protonmail.com"
+		},
+		{
 			"name": "Lennart Gastler",
 			"email": "lennart@lgastler.de",
 			"url": "https://lennartgastler.de"
